# potlock

./: .gitignore  Anchor.toml  Cargo.toml  README.md  SPEC.md  deploy.sh  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  timeline.md  tsconfig.app.json  vite.config.ts
.github/workflows/: anchor-deploy.yml  deploy.yml
convex/: approvals.ts  auth.config.ts  authHelpers.ts  contractPdf.ts  contractVersions.ts  contracts.ts  gemini.ts  groups.ts  http.ts  members.ts  nonces.ts  pools.ts  schema.ts  seed.ts  treasury.ts  treasuryInternal.ts  tsconfig.tsbuildinfo
convex/_generated/: api.d.ts
convex/lib/: approvalRules.ts  validators.ts
openspec/changes/deposit-sol/: design.md  (+2 more)
program/: Anchor.toml
program/programs/treasury/: Cargo.toml
program/programs/treasury/src/: lib.rs
programs/treasury/: Cargo.toml
scripts/: generate-jwt-keys.mjs
src/: App.tsx  index.css  main.tsx  polyfills.ts
src/components/: AddMoneyModal.tsx  AllTransactionsPage.tsx  AmendContractPage.tsx  ApprovalRuleEditor.tsx  ContractCreationPage.tsx  ContractDisplay.tsx  ContractEditor.tsx  ContractEntryScreen.tsx  ContractHistoryPage.tsx  ContractViewer.tsx  CreatePoolFlow.tsx  CreateProposalPage.tsx  InviteMembersModal.tsx  JoinPoolForm.tsx  Logo.tsx  MainMenu.tsx  MemberList.tsx  PoolDashboard.tsx  PoolStatusBanner.tsx  ProposalVoting.tsx  RequestTransactionModal.tsx  SignInScreen.tsx  SolAmount.tsx  WalletGate.tsx
src/hooks/: useSolPrice.ts  useWallet.ts  useWalletAuth.ts
src/idl/: treasury.json
src/lib/: contractHash.ts  demoWallet.ts  treasury.ts
(+117 files in other folders)
